bug fixes: spaced search, edit modal overflow, modal click off

--- a/src/app/ToDo/todo-list/todo-list.component.scss
+++ b/src/app/ToDo/todo-list/todo-list.component.scss
@@ -54,3 +54,8 @@ img {
 .hidden {
   opacity: 0;
 }
+
+.custom-dialog {
+  max-height: 100vh;
+  overflow-y: auto;
+}
